# regime-mm

./: .gitignore  CMakeLists.txt  README.md  generate_figures.py  generate_polish_figures.py  requirements.txt
backtest/src/: backtest_engine.py  metrics.py
configs/: default.yaml
docs/: explainer.md  math_derivation.md  model_limitations.md  references.md
hmm_filter/src/: wonham_filter.py
hmm_filter/tests/: test_wonham.py
pde_solver/src/: hjb_solver.py  optimal_spreads.py  visualize_pde.py
pde_solver/tests/: test_hjb_solver.py
results/: ablation.json  calibrated_params.json  delta_a_regime1.npy  delta_a_regime2.npy  delta_b_regime1.npy  delta_b_regime2.npy  h1.npy  h2.npy  spread_table.json
scripts/: install_deps.sh  run_backtest.sh  run_pde_solver.sh
simulator/: CMakeLists.txt
simulator/include/: market_maker.hpp  order_book.hpp  regime_model.hpp
simulator/src/: main.cpp
